# rskrb5

./: Cargo.toml  NOTICE  README.md  prek.toml
.github/workflows/: ci.yml
docs/: ad-integration.md  ad-lab-provisioning.md  compatibility-report.md  gated-integration.md  github-ad-gate-setup.md  gokrb5-parity.md  gokrb5-parity.toml  publishing.md  release-notes.md  samba-ad-feasibility.md  scratch-log.md
examples/: axum-negotiate.rs
scripts/: check-ad-integration-env.py  check-github-ad-gate.py  check-samba-ad-feasibility.py  run-gated-integration.sh
src/: ap_rep.rs  ap_req.rs  ccache.rs  client.rs  config.rs  crypto.rs  der.rs  evaluation.rs  file_name.rs  http.rs  kadmin.rs  kdc_rep.rs  kdc_req.rs  keytab.rs  krb_cred.rs  krb_error.rs  krb_priv.rs  krb_safe.rs  lib.rs  messages.rs  pac.rs  service.rs  spnego.rs  ticket.rs
src/client/: kpasswd.rs  negotiate.rs  options.rs  principal.rs  transport.rs
src/evaluation/: data.rs  mod.rs
src/pac/: ndr.rs  reader.rs
src/spnego/: der.rs  oid.rs
tests/: ap_rep.rs  ap_req.rs  asn1_fixture_matrix.rs  ccache.rs  client.rs  client_ad_integration.rs  client_integration.rs  client_principal.rs  client_transport.rs  compatibility_report.rs  config.rs  crypto_aes.rs  crypto_des3.rs  crypto_rc4.rs  der_fixture_decode.rs  gokrb5_parity_manifest.rs  gssapi.rs  http.rs  kadmin.rs  kdc_rep.rs  kdc_req.rs  keytab.rs  krb_cred.rs  krb_error.rs  krb_priv.rs  krb_safe.rs  messages.rs  pac.rs  service.rs  spnego.rs  ticket.rs
tests/client/: as_exchange.rs  login_preauth.rs  password_change.rs  session_cache.rs  tgs_exchange.rs
tests/common/: mod.rs
tests/fixtures/: kpasswd-request.hex
