[package]
name = "rskrb5"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Rust compatibility spike for a gokrb5-equivalent Kerberos library."
repository = "https://github.com/clange/rskrb5"
readme = "README.md"
keywords = ["kerberos", "krb5", "spnego", "gssapi", "authentication"]
categories = ["authentication", "cryptography", "network-programming"]
publish = false

[features]
default = ["evaluation"]
evaluation = [
    "dep:hex",
    "dep:picky-asn1",
    "dep:picky-asn1-der",
    "dep:picky-krb",
    "dep:rasn",
    "dep:rasn-kerberos",
    "dep:serde",
]
tokio = ["dep:tokio"]
serde = ["dep:serde"]

[dependencies]
aes = "0.9.1"
hex = { version = "0.4", optional = true }
hmac = "0.13.0"
pbkdf2 = "=0.13.0-rc.10"
picky-asn1 = { version = "0.10.1", optional = true }
picky-asn1-der = { version = "0.5", optional = true }
picky-krb = { version = "0.12.3", optional = true }
rasn = { version = "0.28.13", optional = true }
rasn-kerberos = { version = "0.28.13", features = ["otp"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
sha1 = "0.11.0"
thiserror = "2"
tokio = { version = "1.47", features = ["net", "io-util", "time", "rt"], optional = true }

[[bin]]
name = "rskrb5-compat-report"
path = "src/bin/rskrb5-compat-report.rs"
required-features = ["evaluation"]

[dev-dependencies]
pretty_assertions = "1.4"
