[package]
name = "rskrb5"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Pure-Rust Kerberos v5 client/service library with HTTP Negotiate support."
repository = "https://github.com/clelange/rskrb5"
readme = "README.md"
keywords = ["kerberos", "krb5", "spnego", "gssapi", "authentication"]
categories = ["authentication", "cryptography", "network-programming"]
exclude = [".github/"]

[features]
default = ["spnego", "tokio", "serde"]
evaluation = [
    "spnego",
    "dep:hex",
    "dep:picky-asn1",
    "dep:picky-asn1-der",
    "dep:picky-krb",
    "dep:serde",
]
messages = ["dep:chrono", "dep:rasn", "dep:rasn-kerberos"]
spnego = ["messages", "dep:base64"]
http = ["spnego", "dep:http_types"]
tower = ["http", "dep:tower_layer", "dep:tower_service"]
tokio = ["messages", "dep:hickory-resolver", "dep:tokio"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
aes = "0.9.1"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }
compcol = { version = "0.6.0", default-features = false, features = ["lznt1", "xpress", "xpress_huffman"] }
des = "0.9.0"
hex = { version = "0.4", optional = true }
getrandom = { version = "0.3", features = ["std"] }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["system-config", "tokio"], optional = true }
http_types = { package = "http", version = "1", optional = true }
hmac = "0.13.0"
md-5 = "0.11.0"
md4 = "0.11.0"
pbkdf2 = "=0.13.0-rc.10"
picky-asn1 = { version = "0.10.1", optional = true }
picky-asn1-der = { version = "0.5", optional = true }
picky-krb = { version = "0.12.3", optional = true }
rasn = { version = "0.28.13", optional = true }
rasn-kerberos = { version = "0.28.13", features = ["otp"], optional = true }
rc4 = "0.2.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha1 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2"
tokio = { version = "1.47", features = ["net", "io-util", "time", "rt", "sync"], optional = true }
tower_layer = { package = "tower-layer", version = "0.3", optional = true }
tower_service = { package = "tower-service", version = "0.3", optional = true }
zeroize = { version = "1", features = ["derive"] }

[[bin]]
name = "rskrb5-compat-report"
path = "src/bin/rskrb5-compat-report.rs"
required-features = ["evaluation"]

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
pretty_assertions = "1.4"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread"] }

[[example]]
name = "axum-negotiate"
path = "examples/axum-negotiate.rs"
required-features = ["http"]
